--- a/Info.html
+++ b/Info.html
@@ -17,9 +17,8 @@
 <body style="background-color: #F9FBF2;">
     <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
-                    class="d-inline-block align-text-top">
+            <a class="navbar-brand">
+                <img src="Immagini/LogoEpico.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 Gabriel Ricaldone
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,7 +38,10 @@
                         <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Sistemi.html">Sistemi</a>
+                        <a class="nav-link" href="manutenzione.html">Sistemi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="manutenzione.html">Chi sono</a>
                     </li>
                 </ul>
             </div>
