--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -17,7 +17,7 @@
 <body style="background-color: #F9FBF2;">
     <nav class="navbar navbar-expand-lg navbar-dark shadow p-3 mb-5" style="background-color: #0E1C36" ;>
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <img src="Immagini/LogoEpico.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 Gabriel Ricaldone
             </a>
@@ -38,7 +38,10 @@
                         <a class="nav-link" href="TIPSIT.html">TIPSIT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Sistemi.html">Sistemi</a>
+                        <a class="nav-link" href="manutenzione.html">Sistemi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="manutenzione.html">Chi sono</a>
                     </li>
                 </ul>
             </div>
