--- a/TIPSIT.html
+++ b/TIPSIT.html
@@ -59,6 +59,30 @@
                     style="width: 18rem; background-color: #fff9f5; height: 450px">
                     <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
                     <div class="card-body">
+                        <h5 class="card-title">Stampare numeri primi</h5>
+                        <p class="card-text">Cliccando un pulsante, stamperai 200k numeri primi;
+                        </p>
+                    </div>
+                    <a href="Pagine/ArticoliScuola/Javascript16.html" class="btn btn-primary">Si!</a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Javascript 15</h5>
+                        <p class="card-text">Trovare i fattori di un numero, fatto in collaborazione
+                        </p>
+                    </div>
+                    <a href="Pagine/ArticoliScuola/Javascript15.html" class="btn btn-primary">Si!</a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card mx-auto shadow p-3 mb-5"
+                    style="width: 18rem; background-color: #fff9f5; height: 450px">
+                    <img src="Immagini/Javascript.png" class="card-img-top" alt="...">
+                    <div class="card-body">
                         <h5 class="card-title">Javascript 14</h5>
                         <p class="card-text">Caricare un array, numeri casuali, media ed il massimo.
                         </p>
